# Viabhron-again

./: MVK_BLUEPRINT.md  README.md  capacitor.config.ts  eslint.config.js  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
assets/: README.md
public/: README.md
reference/: firebase-applet-config.json
reference/architecture/: firebase-blueprint.json
reference/backups/gamma_foundation_snapshot/: EXPORT_MANIFEST.md  EXTENSION_HIERARCHY.md  GAMMA_IDEAS.md  firebase-applet-config.json  index.html  metadata.json  tsconfig.json
reference/extensions/tools/: mcpShieldService.ts  supplyChainService.ts
reference/landscape/modules/: AcademyBridgeControl.tsx  AgentForgeControl.tsx  AmbientSounderControl.tsx  ArchitectureAwareControl.tsx  CloudflareControl.tsx  FrameworkAdapterControl.tsx  InteractionSubstrateControl.tsx  MetabolicSecretary.tsx  PaymentShieldControl.tsx  QuantumControl.tsx  QuantumForge.tsx  Simulation.tsx  SocialSandboxControl.tsx  SovereignMCPShield.tsx  SovereignMesh.tsx  SupplyChainShield.tsx  ThreatIntelControl.tsx  WorkspaceControl.tsx
reference/src/: types.ts
src/: App.tsx  index.css  types.ts
src/components/Setup/: Onboarding.tsx  SetupBox.tsx
src/components/Vaa/: ChatList.tsx  ChatView.tsx  VaaClient.tsx
src/hooks/: useAuth.ts  useClickOutside.ts  useDualMode.ts
src/lib/: aiService.ts  apiKeys.ts  db.ts  firebase.ts  infraManager.ts  offlineAi.ts
src/moss/: MossLoader.tsx  SubstrateFrame.tsx
src/vaa/: VaaClient.tsx
workstation-pkg/: BLUEPRINT_WORKSTATION.md  SovereignShell.tsx  types.ts
workstation-pkg/components/: CanopyMenu.tsx  DesktopStage.tsx  SystemTrayMenu.tsx  TaskBar.tsx  WorkstationStage.tsx
workstation-pkg/hooks/: useTabs.ts
workstation-pkg/lib/: firebase.ts
(+145 files in other folders)
